--- a/app/.env
+++ b/app/.env
@@ -19,4 +19,13 @@ APP_ENV=dev
 APP_SECRET=8f2c5e259ab91b84eb6c987bfde2931a
 ###< symfony/framework-bundle ###
 
-DATABASE_URL="mysql://DB_USER:DB_PASS@mysql:3306/DB_NAME?serverVersion=mariadb-10.5.9"
+DATABASE_URL="mysql://user:pass@mysql:3306/nom_de_la_base?serverVersion=mariadb-10.5.9"
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+###< doctrine/doctrine-bundle ###
